<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/hangmanbackground">

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/string_nu_game"
        android:id="@+id/nuGameButton"
        android:onClick="newGame"
        android:background="@drawable/mbutton"
        android:layout_above="@+id/highScoreButton"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/string_hiscore"
        android:id="@+id/highScoreButton"
        android:background="@drawable/mbutton"


        android:layout_above="@+id/ruleButton"
        android:layout_centerHorizontal="true"
        android:onClick="Highscores" />
    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/string_rulebutton"
        android:id="@+id/ruleButton"
        android:background="@drawable/mbutton"

        android:layout_alignParentBottom="true"

        android:layout_centerHorizontal="true"
        android:onClick="rules" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/created_by"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />

</RelativeLayout>
